--- a/style.css
+++ b/style.css
@@ -218,14 +218,6 @@ body {
 
 
 
-<<<<<<< HEAD
-=======
-
-
-
-
-
-
 .footer {
     height: 400px;
     background-image: url(images/back.png);
@@ -233,17 +225,158 @@ body {
     color: white;
     display: flex;
     justify-content: space-evenly;
+    height: 550px;
+    margin-bottom: 0;
 }
 
 .last {
     background-image: url(images/back.png);
-    background-color: #424242;
+    /* background-color: #424242; */
     margin-top: 0;
     color: #eeeeee;
+    position: relative;
+    top: -100px;
+    
     text-align: center;
     /* font-family: ; */
     font-size: 1.3em;
     font-weight: bold;
     margin: 0;
 }
->>>>>>> development
+
+@media only screen and (max-width: 600px) {
+    .header {
+        display: none;
+    }
+
+    .logo {
+        width: 500px;
+        height: 120px;
+    }
+
+    .nav {
+        position: static;
+    }
+
+    .nav-2 {
+        flex-direction: column;
+        font-size: 1.2em;
+        font-weight: bold;
+        /* border-top: 1px solid gray; */
+    }
+
+    .but {
+        display: none;
+    }
+
+    .hero-1 {
+        width: 200px;
+        position: relative;
+        top: 200px;
+    }
+
+    .dis {
+        position: relative;
+        top: -60px;
+    }
+
+    .hero-2 {
+        position: relative;
+        /* left: -00px; */
+        left: 220px;
+    }
+
+    .hero-2>img {
+        width: 340px;
+    }
+
+    .body-2>img {
+        flex-direction: column-reverse;
+        position: relative;
+        left: 100px;
+        /* flex-wrap: wrap; */
+    }
+
+    .donate {
+        flex-direction: column;
+        position: relative;
+        top: 300px;
+        left: -10px;
+        width: 100%;
+    }
+
+    .donate-1 {
+        position: relative;
+        top: -860px;
+        font-size: 1.4em;
+        left: 80px;
+        font-weight: bold;
+        color: #eeeeee;
+        padding-left: 170px;
+        padding-right: 170px;
+    }
+
+    .donate-2 {
+        position: relative;
+        top: -450px;
+        font-size: 1.4em;
+        left: 80px;
+        font-weight: bold;
+        color: #eeeeee;
+        padding-left: 170px;
+        padding-right: 170px;
+    }
+
+    .donate-3 {
+        position: relative;
+        top: 115px;
+        font-size: 1.4em;
+        left: 80px;
+        font-weight: bold;
+        color: #eeeeee;
+        padding-left: 170px;
+        padding-right: 170px;
+    }
+
+    .footer {
+        flex-direction: column;
+        position: relative;
+        height: 1000px;
+        top: 300px;
+        /* background-color: #424242; */
+        margin: 0;
+        width: 100%;
+    }
+
+    .footer>div {
+        margin: auto;
+        /* color: black; */
+    }
+
+    .one {
+        position: relative;
+        top: -50px;
+        text-align: center;
+    }
+
+    .two {
+        position: relative;
+        top: -90px;
+        /* left: -1px; */
+        text-align: center;
+        
+    }
+    .three{
+        text-align: center;
+        position: relative;
+        top: -140px;
+    }
+    .last{
+        /* background-color: #0066b3; */
+        background-color: none;
+        /* z-index: 1; */
+        position: relative;
+        top: 140px;
+        color: #eeeeee;
+    }
+}
